updated iframe height

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			<title>Sales Bot</title>
 		</head>
 		<body>
-			<h1>Initiate chat with the sales chatbot here...</h1>
-			<iframe src="https://webchat.botframework.com/embed/appsupportbot?s=osHcu4c3WLg.cwA._KE.3yPX27YPFySMtT0fyJiZ26OJ_ep3Y6sPehSAPkbEx4w" style="height: 502px; max-height: 502px;"></iframe>
+			<h1>Bhuvana's ChatBot</h1>
+			<iframe src="https://webchat.botframework.com/embed/appsupportbot?s=osHcu4c3WLg.cwA._KE.3yPX27YPFySMtT0fyJiZ26OJ_ep3Y6sPehSAPkbEx4w" style="height: 602px; max-height: 602px;"></iframe>
 		</body>
 </html>
